k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medzoner-go
spec:
  selector:
    matchLabels:
      app: medzoner-go
  template:
    metadata:
      labels:
        app: medzoner-go
    spec:
      containers:
        - name: medzoner-go
          image: localhost:5000/medzoner-go
          workingDir: /var/www
          ports:
            - containerPort: 8002
            - containerPort: 4000
          command:
            - /bin/sh
            - -c
            - |
              CGO_ENABLED=0 go build -gcflags "all=-N -l" -ldflags "-s -w" -o ./bin/app ./cmd/app/main.go
              /dlv exec --listen=:4000 --headless=true --api-version=2 --check-go-version=false --accept-multiclient  --log ./bin/app
#              /dlv exec --listen=:4000 --continue --headless=true --api-version=2 --check-go-version=false --accept-multiclient  --log ./bin/app
