k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medzoner-go-ingress
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  defaultBackend:
    service:
      name: 'medzoner-go'
      port:
        number: 8002
  rules:
    - host: medzoner-go.localhost
      http:
        paths:
          - path: /
            pathType:
              Prefix
            backend:
              service:
                name: medzoner-go
                port:
                  number:
                    8002
